<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<artifactId>Common</artifactId>
	
	<parent>
		<groupId>Stock</groupId>
		<artifactId>Stock</artifactId>
		<version>0.1</version>
		<relativePath>../pom.xml</relativePath>
	</parent>
	
	<properties>
		<maven.compiler.target>11</maven.compiler.target>
	    <maven.compiler.source>11</maven.compiler.source>
	</properties>
	
	<build>
		<sourceDirectory>src</sourceDirectory>
		<testSourceDirectory>test</testSourceDirectory>
		<resources>
			<resource>
				<directory>resource-${ENV_NAME}</directory>
			</resource>
		</resources>
	</build>

	<dependencies>
		<dependency>
			<groupId>Stock</groupId>
			<artifactId>Util</artifactId>
			<version>${stock.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-core</artifactId>
			<version>${spring.security.version}</version>
		</dependency>
		<dependency>
			<groupId>Stock</groupId>
			<artifactId>Util</artifactId>
			<version>${stock.version}</version>
			<classifier>tests</classifier>
			<scope>test</scope>
		</dependency>
	</dependencies>
	
</project>